@@ -10,6 +10,8 @@ configure with avant-preferences OR System->Preferences(->More Preferences)->Ava
 
 New Features In SVN (newest first):
 
+*  You can now choose between Awn style arrows, or the "dock" style arrows, and also the arrow colour. Ammended avant-preferences to match.
+
 *  Text has background! You can load up avant-preferences and set the background color. If you don't like it, just set the background color alpha to transparent. The drawing is a bit pixelated sometimes, but I am working on it!
 
 *  Dual screen support! Look under /apps/avant-window-navigator/ and set the monitor_width and monitor_height variables. Then set force_monitor to TRUE, and start up Awn. ATM this only works for the 1st screen. Single screen users should not be affected.
