@@ -215,21 +215,24 @@ _find_launcher (AwnTask *task, AwnLauncherTerm *term)
 		app_name = wnck_application_get_name(
         			    wnck_window_get_application(term->window));
         	
-        	wnck_app = wnck_window_get_application(term->window);
-		str = g_string_new (wnck_application_get_name(wnck_app));
-		str = g_string_ascii_down (str);
+        	if (WNCK_IS_APPLICATION (wnck_app)) {
+        	
+        		wnck_app = wnck_window_get_application(term->window);
+			str = g_string_new (wnck_application_get_name(wnck_app));
+			str = g_string_ascii_down (str);
 		
-		_normalize (str->str);
+			_normalize (str->str);
 		
-		exec = g_strdup (awn_task_get_application(task));
-		_normalize (exec);
+			exec = g_strdup (awn_task_get_application(task));
+			_normalize (exec);
+			
+			if ( strcmp (exec, str->str) == 0 ) {
+				term->task = task;
+			}
 		
-		if ( strcmp (exec, str->str) == 0 ) {
-			term->task = task;
-		}
-		
-		g_string_free (str, TRUE);
-		g_free(exec);	
+			g_string_free (str, TRUE);
+			g_free(exec);
+		}	
 		
 	}
 	/* try window name, kind of last resort :/ */
